--- a/KGERP/Views/BillRequisition/BillRequisitionMasterSlave.cshtml
+++ b/KGERP/Views/BillRequisition/BillRequisitionMasterSlave.cshtml
@@ -728,16 +728,16 @@
         $(document).ready(function () {
             'use strict';
 
-            //$("#ddlCostCenterId").empty();
+            $("#ddlCostCenterId").empty();
             $("#ddlCostCenterId").append("<option selected disabled>===Select Project Type First===</option>");
 
-            //$("#ddlDivisionId").empty();
+            $("#ddlDivisionId").empty();
             $("#ddlDivisionId").append("<option selected disabled>===Select Project First===</option>");
 
-            //$("#ddlBOQItemId").empty();
+            $("#ddlBOQItemId").empty();
             $("#ddlBOQItemId").append("<option selected disabled>===Select Division First===</option>");
 
-            //$("#ddlRequisitionItemId").empty();
+            $("#ddlRequisitionItemId").empty();
             $("#ddlRequisitionItemId").append("<option selected disabled>===Select BoQ First===</option>");
 
             $('#datePickerById').datepicker({
@@ -1063,7 +1063,7 @@
 
                     $.each(data, function (index, item) {
                         showBoqItemList.append($('<option>', {
-                            value: item.BoQDivisionId,
+                            value: item.BoQItemId,
                             text: item.Name
                         }));
                     });
@@ -1078,7 +1078,6 @@
         function showBoQMaterial() {
             var getBoqItemId = $("#ddlBOQItemId option:selected");
             var showBoqMaterialList = $("#ddlRequisitionItemId");
-
             $.ajax({
                 type: "GET",
                 url: "/BillRequisition/getBoqMaterialList",
@@ -1090,8 +1089,8 @@
 
                     $.each(data, function (index, item) {
                         showBoqMaterialList.append($('<option>', {
-                            value: item.MaterialId,
-                            text: item.MaterialName
+                            value: item.ProductId,
+                            text: item.ProductName
                         }));
                     });
                 },
